[package]
name = "OpenTanTan"
version = "0.1.0"
edition = "2021"
test = true

[dependencies]
rand = { version = "0.9.0", features = ["thread_rng"] }
serenity = "0.12"
strum = { version = "0.27.1", features = ["derive"] }

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"